# Ultron-Empire-2

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  build.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml  render.yaml  requirements-render.txt
.github/workflows/: ci.yml  deploy.yml  security.yml
backend/: config.py  main.py  requirements.txt
backend/agents/: alert_agent.py  analyst.py  client_agent.py  content_agent.py  crew.py  prediction_agent.py
backend/alerts/: engine.py  formatter.py  prioritizer.py  rules.py  telegram_bot.py  whatsapp.py
backend/analytics/: business_metrics.py  commission_forecast.py
backend/api/: alerts.py  analytics.py  chat.py  clients.py  compliance.py  content.py  dashboard.py  deliver.py  documents.py  market.py  predictions.py  reports.py  ws.py  (+3 more)
desktop/: index.html  main.js  package-lock.json  package.json  preload.js
docker/: Dockerfile.backend  Dockerfile.frontend
docs/: call.html  index.html  terminal.html
frontend/: next.config.js  package.json  tailwind.config.js
knowledge_base/: aif_universe.json  benchmarks.json  fee_structures.json  glossary.json  ishaan_preferences.json  mf_categories.json  pms_universe.json  risk_profiles.json  sebi_regulations.json  tax_rules.json
mobile/: app.json  package.json
openclaw/: .env.example  openclaw.json  setup.sh
scripts/: backfill_market.py  backfill_nav.py  export_client_data.py  seed_aif_data.py  seed_all_funds.py  seed_knowledge_base.py  seed_mf_data.py  seed_pms_data.py  test_alerts.py  test_analyst.py  test_telegram.py
telegram_bot/: Dockerfile  bot.py
tests/: conftest.py  test_alerts.py  test_analyst_agent.py  test_client_crm.py  test_content.py  test_data_pipeline.py  test_predictions.py  test_tools.py
website/: index.html
workers/: celery_app.py  celery_config.py  client_reminders.py  content_generator.py  daily_brief.py  earnings_tracker.py  fii_dii_tracker.py  market_monitor.py  monthly_newsletter.py  nav_tracker.py  news_scanner.py  pms_data_refresh.py  prediction_updater.py  sebi_checker.py  weekly_recap.py
(+165 files in other folders)
