[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*", "telegram_bot*", "workers*"]

[project]
name = "ultron-empire"
version = "2.0.0"
description = "Ultron Empire - AI-Powered Wealth Management Operating System"
requires-python = ">=3.11,<3.14"
dependencies = [
    # AI / LLM
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "crewai>=0.80.0",
    "mem0ai>=0.1.0",

    # API Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",

    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",

    # Vector Store
    "pinecone-client>=5.0.0",
    "chromadb>=0.5.0",

    # Cache / Queue
    "redis>=5.2.0",
    "celery[redis]>=5.4.0",

    # Telegram
    "python-telegram-bot>=21.0",

    # Search / Scraping
    "tavily-python>=0.5.0",
    "firecrawl-py>=1.0.0",

    # Market Data
    "yfinance>=0.2.40",
    "nsepython>=0.8.0",

    # News
    "newsapi-python>=0.2.7",
    "feedparser>=6.0.0",

    # PDF / Documents
    "pypdf2>=3.0.0",
    "pdfplumber>=0.11.0",
    "reportlab>=4.2.0",

    # Voice
    "openai>=1.50.0",
    "elevenlabs>=1.10.0",

    # Monitoring
    "langsmith>=0.1.0",
    "sentry-sdk[fastapi]>=2.15.0",

    # Utilities
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.9.0",
    "pytz>=2024.2",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "jinja2>=3.1.0",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
    "httpx>=0.27.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
